add main test input